--- a/npmtest/package.json
+++ b/npmtest/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "npmtest2",
+  "name": "npmtest",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --inspect -r dotenv/config index.js"
+    "dev": "nodemon --inspect -r dotenv/config server.js"
   },
   "author": "",
   "license": "ISC",
